--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,20 @@
     <color name="colorPrimary">#ff4c4c</color>
     <color name="colorPrimaryDark">#ff0000</color>
     <color name="colorAccent">#ff4c4c</color>
+
+
+    <color name="backgroundColor">#1892d5</color>
+    <color name="splash_background">#0291d8</color>
+    <color name="white">#ffffff</color>
+    <color name="home_backdround">#E3F2FE</color>
+    <color name="red">#ef2a2a</color>
+    <color name="orange">#F46036</color>
+    <color name="black">#000</color>
+    <color name="blue">#17d1ce</color>
+    <color name="bg_row_background">#fa315b</color>
+    <color name="gray">#75000000</color>
+
+    <color name="green_tint">#008000</color>
+    <color name="red_tint">#008000</color>
+
 </resources>
